# FinanC

./: .gitignore
back/: alembic.ini  pyproject.toml
back/app/: main.py
back/app/api/: deps.py
back/app/api/v1/: router.py
back/app/api/v1/endpoints/: auth.py  expenses.py  income.py  other_endpoints.py  reports.py  users.py
back/app/core/: config.py  events.py  exceptions.py  security.py
back/app/db/: base.py  init_db.py  session.py
back/app/models/: account.py  category.py  expense.py  goal.py  income.py  notification.py  user.py
back/app/repositories/: base_repository.py  expense_repository.py  income_repository.py  other_repositories.py  user_repository.py
back/app/schemas/: account.py  auth.py  common.py  expense.py  goal.py  income.py  notification.py  report.py  user.py
back/app/services/: auth_service.py  expense_service.py  income_service.py  other_service.py  other_services.py  report_service.py  user_service.py
back/migrations/: env.py
back/migrations/versions/: f97e861d2521_initial_tables.py
front/financ/: index.html  package-lock.json  package.json
