[tool.poetry]
name = "fincontrol-backend"
version = "0.1.0"
description = "Sistema de controle financeiro pessoal - Backend"
authors = ["Eduardo <eduardo.souza720360@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

# Web Framework
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }

# Banco de dados
sqlalchemy = "^2.0.30"
alembic = "^1.13.0"
aiosqlite = "^0.20.0"
asyncpg = { version = "^0.29.0", optional = true }

# Validação e configuração
pydantic = "^2.7.0"
pydantic-settings = "^2.2.0"

# Autenticação
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-multipart = "^0.0.9"

# Utilitários
python-dotenv = "^1.0.0"
httpx = "^0.27.0"


[tool.poetry.extras]
postgres = ["asyncpg"]


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.0"
mypy = "^1.10.0"
ipython = "^8.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true